force-app/main/default/objects/SmokeTestScenario__mdt/SmokeTestScenario__mdt.object-meta.xml
<CustomObject>
    <description>Registry of smoke test scenarios. Each record defines one executable scenario: the implementing Apex class, execution order, timeout, governor budgets, business process tag, and whether it is critical for rollback evaluation. Deployable via Metadata API. Accessed via SmokeTestScenario__mdt.getAll() without SOQL.</description>
    <label>Smoke Test Scenario</label>
    <pluralLabel>Smoke Test Scenarios</pluralLabel>
</CustomObject>