force-app/main/default/objects/SmokeTestScenario__mdt/fields/BusinessProcess__c.field-meta.xml
<CustomField>
    <fullName>BusinessProcess__c</fullName>
    <description>Free-text tag identifying the business process this scenario validates (e.g., Lead Management, Opportunity Pipeline, Case Resolution). Used by SmokeTestAlertRoute__mdt.ScenarioFilter__c to route failure alerts to Business Process Owners.</description>
    <label>Business Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>