force-app/main/default/objects/SmokeTestScenario__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Human-readable description of what this scenario validates, why it is important, and any known limitations. Used in the dashboard scenario configuration screen and onboarding documentation.</description>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>