force-app/main/default/objects/SmokeTestScenario__mdt/fields/ExecutionOrder__c.field-meta.xml
<CustomField>
    <fullName>ExecutionOrder__c</fullName>
    <description>1-based sequence number controlling the order in which the orchestrator dispatches this scenario. Lower numbers execute first. Must be unique across enabled scenarios.</description>
    <label>Execution Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>