force-app/main/default/objects/SmokeTestScenario__mdt/fields/GovernorBudgetOverrideCPU__c.field-meta.xml
<CustomField>
    <fullName>GovernorBudgetOverrideCPU__c</fullName>
    <description>Per-scenario CPU time budget in milliseconds. When set (non-null and positive), overrides SmokeTestConfig__mdt.Default.GovernorBudgetCPUMs__c. Leave null to use the global default.</description>
    <label>Governor Budget Override — CPU (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>