force-app/main/default/objects/SmokeTestScenario__mdt/fields/GovernorBudgetOverrideDML__c.field-meta.xml
<CustomField>
    <fullName>GovernorBudgetOverrideDML__c</fullName>
    <description>Per-scenario DML statement budget. When set (non-null and positive), overrides SmokeTestConfig__mdt.Default.GovernorBudgetDML__c. Leave null to use the global default.</description>
    <label>Governor Budget Override — DML</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>