force-app/main/default/objects/SmokeTestScenario__mdt/fields/GovernorBudgetOverrideSOQL__c.field-meta.xml
<CustomField>
    <fullName>GovernorBudgetOverrideSOQL__c</fullName>
    <description>Per-scenario SOQL query budget. When set (non-null and positive), overrides SmokeTestConfig__mdt.Default.GovernorBudgetSOQL__c. Leave null to use the global default.</description>
    <label>Governor Budget Override — SOQL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>