force-app/main/default/objects/SmokeTestScenario__mdt/fields/IsCritical__c.field-meta.xml
<CustomField>
    <fullName>IsCritical__c</fullName>
    <description>When true, a failure in this scenario alone can trigger auto-rollback (if the Auto-Rollback policy is active). Critical scenarios represent business-critical workflows where a single failure indicates a deployment is unsafe.</description>
    <label>Critical Scenario</label>
    <type>Checkbox</type>
</CustomField>