force-app/main/default/objects/SmokeTestScenario__mdt/fields/IsEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsEnabled__c</fullName>
    <description>When false the orchestrator skips this scenario entirely. Allows administrators to disable individual scenarios without deleting CMT records.</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>