force-app/main/default/objects/SmokeTestScenario__mdt/fields/RoleProfile__c.field-meta.xml
<CustomField>
    <fullName>RoleProfile__c</fullName>
    <description>Salesforce Profile name under which this scenario executes via System.runAs(). Null means execute as the running user (integration user). Used for role-based functional validation (US-4).</description>
    <label>Role Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>