force-app/main/default/objects/SmokeTestScenario__mdt/fields/ScenarioClass__c.field-meta.xml
<CustomField>
    <fullName>ScenarioClass__c</fullName>
    <description>Fully qualified Apex class name implementing ISmokeTestScenario. The orchestrator uses Type.forName() to instantiate this class at runtime. The class must exist in the org at execution time; a missing class produces an Error result rather than blocking deployment.</description>
    <label>Scenario Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>