force-app/main/default/objects/SmokeTestScenario__mdt/fields/TimeoutOverrideSec__c.field-meta.xml
<CustomField>
    <fullName>TimeoutOverrideSec__c</fullName>
    <description>Per-scenario timeout in seconds. When set (non-null), overrides SmokeTestConfig__mdt.Default.PerScenarioTimeoutSec__c for this scenario only. Leave null to use the global default.</description>
    <label>Timeout Override (seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>